--- a/AngularWebPack2/AngularWebPack2/AngularWebPack2.csproj
+++ b/AngularWebPack2/AngularWebPack2/AngularWebPack2.csproj
@@ -21,5 +21,18 @@
   <ItemGroup>
     <Folder Include="src\app\" />
   </ItemGroup>
+  
+   <Target Name="RunWebpack" BeforeTargets="Build" Condition="!Exists('wwwroot\dist') ">
+    <!-- Ensure Node.js is installed -->
+    <Exec Command="node --version" ContinueOnError="true">
+      <Output TaskParameter="ExitCode" PropertyName="ErrorCode" />
+    </Exec>
+    <Error Condition="'$(ErrorCode)' != '0'" Text="Node.js is required to build and run this project. To continue, please install Node.js from https://nodejs.org/, and then restart your command prompt or IDE." />
+
+    <!-- In development, the dist files won't exist on the first run or when cloning to
+         a different machine, so rebuild them if not already present. -->
+    <Message Importance="high" Text="Performing first-run Webpack build..." />
+    <Exec Command="node node_modules/webpack/bin/webpack.js --config webpack.config.js" />
+  </Target>
 
 </Project>
